--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <div class="row justify-content-center">
           <div class="col-lg-8 text-center">
             <!-- Imagem Ultrasecreto -->
-            <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
+            <img class="img-fluid" src="">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>Simples Protocolo de 4 Componentes que Elimina a Foliculite em 14 dias ou menos</b></h3>
+            <h3 class="my-4"><b>Protocolo Simples de 4 Componentes que Elimina a Foliculite em até 14 dias</b></h3>
 
             <!-- VSL -->
             <script type="text/javascript" id="scr_6226ac18aa8f7e000965d88e">var s=document.createElement("script");s.src="https://cdn.converteai.net/8b03b5e9-1e95-4b45-9063-037ac9b350ab/players/6226ac18aa8f7e000965d88e/player.js",s.async=!0,document.head.appendChild(s);</script>
