--- a/jp/index.html
+++ b/jp/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<title>Perca de peso</title>
+<title>O fim da Foliculite</title>
 <head>
 
 <meta charset="utf-8">
@@ -83,7 +83,7 @@
 <div id="primeira">
 <div class="question">
 <h1>Pergunta 1</h1>
-<p>Você realmente quer descobrir esse protocolo?</p>
+<p>Você já tentou eliminar a foliculite várias, mas ela sempre volta?</p>
 </div>
 <div class="answer">
 <button class="btn" onclick="segunda()">SIM</button>
@@ -93,7 +93,7 @@
 <div id="segunda" class="hide">
 <div class="question">
 <h1>Pergunta 2</h1>
-<p>Você promete não revelar para ninguém?</p>
+<p>Você gostaria de descobrir uma solução definitiva?</p>
 </div>
 <div class="answer">
 <button class="btn" onclick="terceira()">SIM</button>
@@ -103,7 +103,7 @@
 <div id="terceira" class="hide">
 <div class="question">
 <h1>Pergunta 3</h1>
-<p>O vídeo a seguir tem um limite para pouquíssimas pessoas verem ao mesmo tempo... Você pretende ver até o fim?</p>
+<p>O vídeo a seguir revela o protocolo capaz de eliminar a foliclute e tem um limite para pouquíssimas pessoas verem ao mesmo tempo... Você pretende ver até o fim?</p>
 </div>
 <div class="answer">
 <button class="btn" onclick="redirect()">SIM</button>
