--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h3 class="my-4"><b>Protocolo de 4 Componentes que Elimina a Foliculite em até 14 dias</b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_6226ac18aa8f7e000965d88e">var s=document.createElement("script");s.src="https://cdn.converteai.net/8b03b5e9-1e95-4b45-9063-037ac9b350ab/players/6226ac18aa8f7e000965d88e/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <script type="text/javascript" id="scr_62631a573c4c77000af314ff">var s=document.createElement("script");s.src="https://scripts.converteai.net/08377413-89ed-42dd-bf11-d19d46d5424b/players/62631a573c4c77000af314ff/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
