--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <img class="img-fluid" src="">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>Protocolo de 4 Componentes que Elimina a Foliculite em até 14 dias</b></h3>
+            <h3 class="my-4"><b></b></h3>
 
             <!-- VSL -->
             <script type="text/javascript" id="scr_62631a573c4c77000af314ff">var s=document.createElement("script");s.src="https://scripts.converteai.net/08377413-89ed-42dd-bf11-d19d46d5424b/players/62631a573c4c77000af314ff/player.js",s.async=!0,document.head.appendChild(s);</script>
